test change to README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+# This is eQE
+
 This is the distribution of the Quantum ESPRESSO suite of codes (ESPRESSO: 
 opEn-Source Package for Research in Electronic Structure, Simulation, and
 Optimization).
