small changes to the generator script

--- a/install/generator2f90.ipynb
+++ b/install/generator2f90.ipynb
@@ -2,102 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
       "PW/src/allocate_fft_large.f90\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
       "PW/src/allocate_locpot_large.f90\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
       "PW/src/force_lc_large.f90\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
       "PW/src/gradcorr_large.f90\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
       "PW/src/init_vloc_large.f90\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
       "PW/src/v_of_rho_large.f90\n",
-      "routine start\n",
-      "logic start declaration\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start declaration\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start declaration\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start declaration\n",
-      "procedure end\n",
       "Modules/xc_rVV10_large.f90\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "routine start\n",
-      "logic start implicit\n",
-      "procedure end\n",
-      "Modules/xc_vdW_DF_large.f90\n"
+      "Modules/xc_vdW_DF_large.f90\n",
+      "Modules/recvec_subs_large.f90\n"
      ]
     }
    ],
@@ -112,18 +32,16 @@
     "\"PW/src/init_vloc_large.f90.generator\",\n",
     "\"PW/src/v_of_rho_large.f90.generator\",\n",
     "\"Modules/xc_rVV10_large.f90.generator\",\n",
-    "\"Modules/xc_vdW_DF_large.f90.generator\"\n",
+    "\"Modules/xc_vdW_DF_large.f90.generator\",\n",
+    "\"Modules/recvec_subs_large.f90.generator\",\n",
     "]\n",
     "eqe_new_root = \"/home/alessandro/QE/hackathon2018/eqe_new/\"\n",
-    "qe_current_root = \"/home/alessandro/QE/hackathon2018/eqe_new/\"\n",
-    "for generator in generator_files:\n",
-    "    pass\n",
-    "    generator_to_f90(generator)"
+    "qe_current_root = \"/home/alessandro/QE/hackathon2018/eqe_new/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +74,8 @@
     "\"stress_rVV10_gradient\",\n",
     "\"initialize_spline_interpolation\",\n",
     "\"interpolate_kernel\",\n",
-    "\"numerical_gradient\"\n",
+    "\"numerical_gradient\",\n",
+    "\"gshells\"\n",
     "]\n",
     "\n",
     "patched_function_name = [\n",
@@ -186,13 +105,14 @@
     "\"stress_rVV10_gradient_large\",\n",
     "\"initialize_spline_interpolation_large\",\n",
     "\"interpolate_kernel_large\",\n",
-    "\"numerical_gradient_large\"\n",
+    "\"numerical_gradient_large\",\n",
+    "\"gshells_large\"\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -220,11 +140,11 @@
     "                raise Exception(\"Error fetching the logic of routine {} in {}\".format(routine_name, filename))\n",
     "            if mo0 is not None:    \n",
     "                if mo0.group(1).lower() == routine_name.lower():\n",
-    "                    print(\"routine start\")\n",
+    "                    #print(\"routine start\")\n",
     "                    in_routine = True\n",
     "            if mo1 is not None:\n",
     "                if mo1.group(1).lower() == routine_name.lower():\n",
-    "                    print(\"function start\")\n",
+    "                    #print(\"function start\")\n",
     "                    in_routine = True\n",
     "            \n",
     "\n",
@@ -233,21 +153,21 @@
     "                    #print(line)\n",
     "                    mo0 = re.match(implicitnone_rgx, line)\n",
     "                    if mo0 is not None:\n",
-    "                        print(\"logic start implicit\")\n",
+    "                        #print(\"logic start implicit\")\n",
     "                        in_logic = True\n",
     "                    else:\n",
     "                        loline = line.lower()\n",
     "                        #for typ in [\"integer, complex, character, real, logical, type\"]:\n",
     "                        if loline.strip().startswith((\"integer\", \"complex\", \"character\", \"real\", \"logical\", \"type\")):\n",
     "                            #\n",
-    "                            print(\"logic start declaration\")\n",
+    "                            #print(\"logic start declaration\")\n",
     "                            in_logic = True\n",
     "                            logic_lines.append(line)\n",
     "                else:\n",
     "                    mo0 = re.match(endsubroutine_rgx, line)\n",
     "                    mo1 = re.match(endfunction_rgx, line)\n",
     "                    if mo0 is not None or mo1 is not None:\n",
-    "                        print(\"procedure end\")\n",
+    "                        #print(\"procedure end\")\n",
     "                        return logic_lines\n",
     "                    else:\n",
     "                        logic_lines.append(patch_line(line))\n",
@@ -257,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +187,7 @@
     "def generator_to_f90(filename):\n",
     "    f90file = filename[:-10]\n",
     "    prev_line = \"\"\n",
-    "    with open(eqe_new_root+filename) as fin, open(f90file,\"w\") as fout:\n",
+    "    with open(eqe_new_root+filename) as fin, open(eqe_new_root+f90file,\"w\") as fout:\n",
     "        for line in fin:\n",
     "            if \"!hack2018\" in line.lower():\n",
     "                line = line.replace(\"!hack2018\", \"\")\n",
@@ -286,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
