generators can be now used for modules as well

--- a/install/generator2f90.ipynb
+++ b/install/generator2f90.ipynb
@@ -2,25 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PW/src/allocate_fft_large.f90\n",
-      "PW/src/allocate_locpot_large.f90\n",
-      "PW/src/force_lc_large.f90\n",
-      "PW/src/gradcorr_large.f90\n",
-      "PW/src/init_vloc_large.f90\n",
-      "PW/src/v_of_rho_large.f90\n",
-      "Modules/xc_rVV10_large.f90\n",
-      "Modules/xc_vdW_DF_large.f90\n",
-      "Modules/recvec_subs_large.f90\n"
-     ]
-    }
-   ],
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
@@ -34,6 +20,7 @@
     "\"Modules/xc_rVV10_large.f90.generator\",\n",
     "\"Modules/xc_vdW_DF_large.f90.generator\",\n",
     "\"Modules/recvec_subs_large.f90.generator\",\n",
+    "\"Modules/cell_base_large.f90.generator\",\n",
     "]\n",
     "eqe_new_root = \"/home/alessandro/QE/hackathon2018/eqe_new/\"\n",
     "qe_current_root = \"/home/alessandro/QE/hackathon2018/eqe_new/\""
@@ -41,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +164,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_module_logic(module_name, filename):\n",
+    "    \n",
+    "    module_rgx = re.compile(r'^\\s*module\\s+(?!procedure\\b)(\\w+)',re.IGNORECASE)\n",
+    "    endmodule_rgx = re.compile(r'^\\s*end\\s*module(?:\\s+(\\w+))?',re.IGNORECASE)\n",
+    "    implicitnone_rgx = re.compile(r'^\\s*implicit\\s+none\\s*$',re.IGNORECASE)\n",
+    "    \n",
+    "    logic_lines = []\n",
+    "    with open(qe_current_root+filename) as f:\n",
+    "        \n",
+    "        in_module = False\n",
+    "        in_logic = False\n",
+    "        \n",
+    "        for line in f:\n",
+    "            \n",
+    "            # check if entering a subroutine\n",
+    "            # or a function\n",
+    "            mo0 = re.match(module_rgx, line)\n",
+    "            if mo0 is not None and in_module:\n",
+    "                raise Exception(\"Error fetching the logic of module {} in {}\".format(module_name, filename))\n",
+    "            if mo0 is not None:    \n",
+    "                if mo0.group(1).lower() == module_name.lower():\n",
+    "                    #print(\"routine start\")\n",
+    "                    in_module = True\n",
+    "\n",
+    "            if in_module:\n",
+    "                if not in_logic:\n",
+    "                    #print(line)\n",
+    "                    mo0 = re.match(implicitnone_rgx, line)\n",
+    "                    if mo0 is not None:\n",
+    "                        #print(\"logic start implicit\")\n",
+    "                        in_logic = True\n",
+    "                    else:\n",
+    "                        loline = line.lower()\n",
+    "                        #for typ in [\"integer, complex, character, real, logical, type\"]:\n",
+    "                        if loline.strip().startswith((\"integer\", \"complex\", \"character\", \"real\", \"logical\", \"type\")):\n",
+    "                            #\n",
+    "                            #print(\"logic start declaration\")\n",
+    "                            in_logic = True\n",
+    "                            logic_lines.append(line)\n",
+    "                else:\n",
+    "                    mo0 = re.match(endmodule_rgx, line)\n",
+    "                    if mo0 is not None:\n",
+    "                        #print(\"procedure end\")\n",
+    "                        return logic_lines\n",
+    "                    else:\n",
+    "                        logic_lines.append(patch_line(line))\n",
+    "                \n",
+    "    raise Exception(\"Error fetching the logic of module {} in {}\".format(module_name, filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -192,8 +237,14 @@
     "            if \"!hack2018\" in line.lower():\n",
     "                line = line.replace(\"!hack2018\", \"\")\n",
     "                #spline = line.split()\n",
-    "                routine_name, original_file = json.loads(line)\n",
-    "                logic_lines = get_routine_logic(routine_name, original_file)\n",
+    "                list_line = json.loads(line)\n",
+    "                if len(list_line) == 2:\n",
+    "                    routine_name, original_file = list_line\n",
+    "                    logic_lines = get_routine_logic(routine_name, original_file)\n",
+    "                elif len(list_line) == 3:\n",
+    "                    block_name, original_file, block_type = list_line\n",
+    "                    if block_type == \"module\":\n",
+    "                        logic_lines = get_module_logic(block_name, original_file)\n",
     "                for line1 in logic_lines:\n",
     "                    fout.write(line1)\n",
     "            else:\n",
@@ -206,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -233,12 +284,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modules/cell_base_large.f90\n"
+     ]
+    }
+   ],
+   "source": [
+    "for generator in generator_files[-1:]:\n",
+    "    pass\n",
+    "    #print(generator)\n",
+    "    generator_to_f90(generator)"
+   ]
   }
  ],
  "metadata": {
