after some fixes, and after disabling vdW_large/VV10_large, Modules compiles correctly!

--- a/install/generator2f90.ipynb
+++ b/install/generator2f90.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -17,8 +17,8 @@
     "\"PW/src/gradcorr_large.f90.generator\",\n",
     "\"PW/src/init_vloc_large.f90.generator\",\n",
     "\"PW/src/v_of_rho_large.f90.generator\",\n",
-    "\"Modules/xc_rVV10_large.f90.generator\",\n",
-    "\"Modules/xc_vdW_DF_large.f90.generator\",\n",
+    "#\"Modules/xc_rVV10_large.f90.generator\",\n",
+    "#\"Modules/xc_vdW_DF_large.f90.generator\",\n",
     "\"Modules/recvec_subs_large.f90.generator\",\n",
     "\"Modules/cell_base_large.f90.generator\",\n",
     "]\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -48,20 +48,20 @@
     "\"gradrho\",\n",
     "\"init_vloc\",\n",
     "\"allocate_locpot\",\n",
-    "\"vdW_DF (module)\",\n",
-    "\"xc_vdW_DF\",\n",
-    "\"stress_vdW_DF\",\n",
-    "\"initialize_spline_interpolation\",\n",
-    "\"interpolate_kernel\",\n",
-    "\"numerical_gradient\",\n",
+    "#\"vdW_DF (module)\",\n",
+    "#\"xc_vdW_DF\",\n",
+    "#\"stress_vdW_DF\",\n",
+    "#\"initialize_spline_interpolation\",\n",
+    "#\"interpolate_kernel\",\n",
+    "#\"numerical_gradient\",\n",
     "\"allocate_fft\",\n",
     "\"force_lc\",\n",
-    "\"xc_rVV10\",\n",
-    "\"stress_rVV10\",\n",
-    "\"stress_rVV10_gradient\",\n",
-    "\"initialize_spline_interpolation\",\n",
-    "\"interpolate_kernel\",\n",
-    "\"numerical_gradient\",\n",
+    "#\"xc_rVV10\",\n",
+    "#\"stress_rVV10\",\n",
+    "#\"stress_rVV10_gradient\",\n",
+    "#\"initialize_spline_interpolation\",\n",
+    "#\"interpolate_kernel\",\n",
+    "#\"numerical_gradient\",\n",
     "\"gshells\"\n",
     "]\n",
     "\n",
@@ -79,27 +79,27 @@
     "\"gradrho_large\",\n",
     "\"init_vloc_large\",\n",
     "\"allocate_locpot_large\",\n",
-    "\"vdW_DF_large\",\n",
-    "\"xc_vdW_DF_large\",\n",
-    "\"stress_vdW_DF_large\",\n",
-    "\"initialize_spline_interpolation_large\",\n",
-    "\"interpolate_kernel_large\",\n",
-    "\"numerical_gradient_large\",\n",
+    "#\"vdW_DF_large\",\n",
+    "#\"xc_vdW_DF_large\",\n",
+    "#\"stress_vdW_DF_large\",\n",
+    "#\"initialize_spline_interpolation_large\",\n",
+    "#\"interpolate_kernel_large\",\n",
+    "#\"numerical_gradient_large\",\n",
     "\"allocate_fft_large\",\n",
     "\"force_lc_large_large\",\n",
-    "\"xc_rVV10_large\",\n",
-    "\"stress_rVV10_large\",\n",
-    "\"stress_rVV10_gradient_large\",\n",
-    "\"initialize_spline_interpolation_large\",\n",
-    "\"interpolate_kernel_large\",\n",
-    "\"numerical_gradient_large\",\n",
+    "#\"xc_rVV10_large\",\n",
+    "#\"stress_rVV10_large\",\n",
+    "#\"stress_rVV10_gradient_large\",\n",
+    "#\"initialize_spline_interpolation_large\",\n",
+    "#\"interpolate_kernel_large\",\n",
+    "#\"numerical_gradient_large\",\n",
     "\"gshells_large\"\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -311,8 +311,6 @@
       "PW/src/gradcorr_large.f90\n",
       "PW/src/init_vloc_large.f90\n",
       "PW/src/v_of_rho_large.f90\n",
-      "Modules/xc_rVV10_large.f90\n",
-      "Modules/xc_vdW_DF_large.f90\n",
       "Modules/recvec_subs_large.f90\n",
       "Modules/cell_base_large.f90\n"
      ]
