--- a/install/generator2f90.ipynb
+++ b/install/generator2f90.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -22,13 +22,13 @@
     "\"Modules/recvec_subs_large.f90.generator\",\n",
     "\"Modules/cell_base_large.f90.generator\",\n",
     "]\n",
-    "eqe_new_root = \"/home/alessandro/QE/hackathon2018/eqe_new/\"\n",
-    "qe_current_root = \"/home/alessandro/QE/hackathon2018/qe_current/\""
+    "eqe_new_root = \"/home/alessandro/QE/hack2018//eqe_new/\"\n",
+    "qe_current_root = \"/home/alessandro/QE/hack2018//qe_current/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -348,11 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
-  },
-  "widgets": {
-   "state": {},
-   "version": "1.1.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
