--- a/install/generator2f90.ipynb
+++ b/install/generator2f90.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -41,11 +41,11 @@
     "\"v_hubbard\",\n",
     "\"v_hubbard_nc\",\n",
     "\"v_h_of_rho_r\",\n",
-    "\"hessian\",\n",
-    "\"grad_dot\",\n",
-    "\"gradient\",\n",
+    "#\"hessian\",\n",
+    "#\"grad_dot\",\n",
+    "#\"gradient\",\n",
     "\"gradcorr\",\n",
-    "\"gradrho\",\n",
+    "#\"gradrho\",\n",
     "\"init_vloc\",\n",
     "\"allocate_locpot\",\n",
     "#\"vdW_DF (module)\",\n",
@@ -72,11 +72,11 @@
     "\"v_hubbard_large\",\n",
     "\"v_hubbard_nc_large\",\n",
     "\"v_h_of_rho_r_large\",\n",
-    "\"hessian_large\",\n",
-    "\"grad_dot_large\",\n",
-    "\"gradient_large\",\n",
+    "#\"hessian_large\",\n",
+    "#\"grad_dot_large\",\n",
+    "#\"gradient_large\",\n",
     "\"gradcorr_large\",\n",
-    "\"gradrho_large\",\n",
+    "#\"gradrho_large\",\n",
     "\"init_vloc_large\",\n",
     "\"allocate_locpot_large\",\n",
     "#\"vdW_DF_large\",\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -298,8 +298,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
